# ConcordiumHackathonProject

./: README.md  readme.md  update_param.json  will_demo.txt
demo/: package-lock.json  package.json
demo/home/: contractUtils.js  index.html  style.css
demo_v2/: package-lock.json  package.json
demo_v2/public/: index.html  manifest.json
demo_v2/src/: App.css  App.js  NavBar.js  WillUtils.js
demo_v2/src/Views/: ActiveWill.js  CreateWill.js  Main.js  Notary.js  PreviousWills.js  WillView.js
demo_v2/src/components/Dapp/: CreateWill.js  Dapp.css  Dapp.js  Main.js  Notary.js
demo_v2/src/components/Dapp/Sub/: ActiveWill.css  ActiveWill.js  ConnectId.css  ConnectId.js  Notarize.js  OverView.js  PreviousWills.js  SideBar.js  WillOverView.js  WillView.js
demo_v2/src/components/Dapp/Sub/OverViewSub/: Compliance.js  DocumentSign.js  Documents.js  Legal.js  Notary.js  sub.css
demo_v2/src/components/Dapp/Sub/OverViewSub/SubDocument/: File.css  File.js
demo_v2/src/components/Dapp/Utils/: ContractServices.js  DeployedContract.json  WillUtils.js
demo_v2/src/components/Home/: Home.css  Home.js
demo_v2/src/components/Home/Sub/: About.js  Card.js  Footer.js  HowItWorks.js  MainPage.js  RoadMap.js
e_will/: Cargo.toml
e_will/src/: lib.rs
src/: lib.rs
